SPW: Add margin-bottom:0; to Share Button block to fix alignment issue.

--- a/web/themes/custom/samhsa_pep_uswds/src/sass/components/header/_comp_hdr_connect.scss
+++ b/web/themes/custom/samhsa_pep_uswds/src/sass/components/header/_comp_hdr_connect.scss
@@ -31,6 +31,7 @@
         -ms-flex-align: start;
             align-items: flex-start;
     list-style-type: none;
+    margin-bottom:0;
     width: 160px;
 
     @media screen and (max-width:$max-width-mobile-portrait-large) {
@@ -56,7 +57,7 @@
   }
 }
 
-//adjust font size for tablet 
+//adjust font size for tablet
 @media screen and (min-width: $max-width-mobile-landscape) and (max-width: $max-width-tablet-landscape){
   h1{
     font-size: 2.8rem;
